--- a/swarm-playground/main_ws/src/Utils/rviz_plugins/CMakeLists.txt
+++ b/swarm-playground/main_ws/src/Utils/rviz_plugins/CMakeLists.txt
@@ -63,7 +63,9 @@ include_directories(
 
 add_library(${PROJECT_NAME} ${SOURCE_FILES})
 
-add_dependencies(${PROJECT_NAME} multi_map_server_generate_messages_cpp)
+if(TARGET multi_map_server_generate_messages_cpp)
+  add_dependencies(${PROJECT_NAME} multi_map_server_generate_messages_cpp)
+endif()
 
 target_link_libraries(${PROJECT_NAME}
     ${catkin_LIBRARIES}
